[package]
name = "rust-api-jwt"
version = "0.1.0"
authors = ["First Last <youremail@example.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.6"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.2", default-features = false, features = ["sqlite", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.7"
r2d2 = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

alcoholic_jwt = "1.0.0"
reqwest = "0.11"
